# img-rename

./: CMakeLists.txt  FileItem.cpp  FileItem.h  Formatter.cpp  Formatter.h  ImageNaming.cpp  ImageNaming.h  Log.h  README.md  TODO.md  TODO.txt  main.cpp  notes.txt
src/: FileItem.cpp  FileItem.h  Formatter.cpp  Formatter.h  ImageNaming.cpp  ImageNaming.h  ImgRename.h.in  Log.cpp  img_rename.h.in  main.cpp
test/: CMakeLists.txt  test.cpp
